# pybann

./: .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pybann-actions.yml  pybann-pip.yml  pybann-poetry.yml
docs/: index.html  pybann.html  search.json
docs/pybann/: activation.html  gradientdescent.html  layers.html  model.html
docs/source/: api_activation.rst  api_gradient.rst  api_layer.rst  api_model.rst  api_reference.rst  conf.py  getting_started.rst  index.rst
examples/: iris-example.py
production/: activation_functions.py
pybann/: __init__.py  activation.py  backpropagation.py  gradientdescent.py  layers.py  model.py  network.py  particleswarm.py
tests/: test_activation.py  test_backpropagation.py  test_network.py  tests_activation.py  tests_gradientdescent.py  tests_layers.py  tests_model.py  tests_particleswarm.py
